--- a/checkbox-menu-button-nav-bar/style.css
+++ b/checkbox-menu-button-nav-bar/style.css
@@ -75,12 +75,12 @@ body {
     width: 40vw;
     background-color: azure;
   }
-  .nav-links a {
+  #nav-links a {
     margin: 0.5em 0;
     text-align: center;
     align-items: stretch;
   }
 }
-.nav-links a {
+#nav-links a {
   padding: 0 1em;
 }
